# arroy_benchmarks

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: perf.rs  reader.rs
src/: custom_ordered_float.rs  import-vectors.rs  import_vectors.rs  lib.rs  main.rs  mmapped_datasets.rs  recall.rs  utils.rs
