[package]
name = "arroy_benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features=["derive"] }
env_logger = "0.11.8"
heed = "0.22.0"
rand = { version = "0.8.5" }
bytemuck = "1.23.0"
anyhow = "1.0.98"
fast-distances = "0.0.1"
ndarray = "0.16.1"
ordered-float = "5.0.0"
roaring = "0.10.12"

[dependencies.arroy]
git = "https://github.com/meilisearch/arroy"
branch = "main"
# git = "https://github.com/nnethercott/arroy"
# branch = "replace-ordered-float"
# branch = "replace-minheap-for-median"

[dev-dependencies]
criterion = "0.6.0"
ordered-float = "5.0.0"

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "recall"
path = "./src/recall.rs"

[[bench]]
name = "reader"
harness = false

[profile.release]
debug = "line-tables-only"
[profile.bench]
debug = "line-tables-only"
