[package]
name = "arroy_benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features=["derive"] }
env_logger = "0.11.8"
heed = "0.22.0"
rand = { version = "0.8.5" }
rand_distr = "0.4.0"
bytemuck = "1.23.0"
anyhow = "1.0.98"
fast-distances = "0.0.1"
ndarray = "0.16.1"
ordered-float = "5.0.0"
roaring = "0.10.12"
rayon = "1.10.0"

[dependencies.arroy]
git = "https://github.com/meilisearch/arroy"
branch = "main"
# path = "../arroy/"

[dev-dependencies]
criterion = "0.6.0"
ordered-float = "5.0.0"

[[bin]]
name = "recall"
path = "./src/recall.rs"

[[bench]]
name = "reader"
harness = false

[[bench]]
name = "perf"
harness = false

[profile.release]
debug = "line-tables-only"
[profile.bench]
debug = "line-tables-only"
